<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>POM</groupId>
  <artifactId>Git-Jenkins-Grid-AWS-Project</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>Git-Jenkins-Grid-AWS-Project</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.6.0</version>
		</dependency>
    
  </dependencies>

  <build>
	  
	  <pluginManagement>
			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
			<plugins>
				
				<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M1</version>
					
					<configuration>
						<forkCount>3</forkCount>
						<reuseForks>false</reuseForks>
						<testFailureIgnore>true</testFailureIgnore>
						<useSystemClassLoader>false</useSystemClassLoader>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						
						<suiteXmlFiles>
							<suiteXmlFile>E:\SeleniumProject2023\Git-Jenkins-Grid-AWS-Project\src\test\resources\Test Runners\testng.xml</suiteXmlFile>
						</suiteXmlFiles>
						
						<!-- 
						<argLine>
                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                		</argLine>
						-->
                		
					</configuration>
					
				</plugin>
				
			</plugins>
		</pluginManagement>
	  
      </build>
</project>
















